--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-:root {
-  --tg-theme-bg-color: #efeff3;
+/* :root {
+  --tg-theme-bg-color: #ffffff;
   --tg-theme-button-color: #2eaddc;
   --tg-theme-button-text-color: white;
-}
+} */
